--- a/css/main.css
+++ b/css/main.css
@@ -1,263 +1,362 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
-
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html {
-  color: #222;
-  font-size: 1em;
-  line-height: 1.4;
-}
-
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * Vendor-prefixed and regular ::selection selectors cannot be combined:
- * https://stackoverflow.com/a/16982510/7133471
- *
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
-
-::selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-  vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-  border: 0;
+body {
+  font-family: 'Roboto', sans-serif;
+  display: flex;
   margin: 0;
-  padding: 0;
 }
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-  resize: vertical;
+.leftsidebar {
+  width: 276px;
+  background: #F4F9FF;
+  padding: 45px;
 }
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers
- */
-
-.hidden,
-[hidden] {
-  display: none !important;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- *
- * 1. For long content, line feeds are not interpreted as spaces and small width
- *    causes content to wrap 1 word per line:
- *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
- */
-
-.sr-only {
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
+.player {
+  width: 276px;
+  height: 430px;
+  background: #2D2D2D;
+  border-radius: 15px;
+  display: flex;
   position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  /* 1 */
 }
-
-/*
- * Extends the .sr-only class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
-
-.sr-only.focusable:active,
-.sr-only.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  white-space: inherit;
+.playercontent {
+  width: 220px;
+  height: 360px;
+  margin: 35px 28px;
+  position: absolute;
+}
+.nowplaying {
+  font-size: 18px;
+  color: white;
+  margin: 0 auto 30px;
+  text-align: center;
+  border: none;
+}
+.bookthumb {
+  width: 218px;
+  height: 130px;
+}
+.bookdesc {
+  margin: 29px auto 25px;
+}
+.nameplay {
+  margin: 0 auto 4px;
+  color: white;
+  text-align: center;
+}
+.authorplay {
+  margin: 4px auto 0;
+  color: white;
+  text-align: center;
+}
+.playinfo {
+  width: 218px;
+  height: 15px;
+  display: flex;
+  box-sizing: border-box;
+}
+.timebegin {
+  color: white;
+  display: inline;
+  margin: auto 0px;
+  text-align: center;
+  line-height: 15px;
+}
+.lineplay {
   width: auto;
+  height: 15px;
+  margin: auto 15px;
+  display: flex;
+  box-sizing: border-box;
+}
+.before {
+  width: 71px;
+  height: 3px;
+  background: white;
+  z-index: 2;
+  display: inline;
+  margin-top: 6px;
+}
+.ellipse {
+  width: 11px;
+  height: 11px;
+  z-index: 3;
+  display: inline;
+  margin-top: 2px;
+}
+.after {
+  width: 131px;
+  height: 3px;
+  z-index: 1;
+  background: grey;
+  opacity: 0.3;
+  display: inline;
+  margin-top: 6px;
+  margin-left: -82px;
+}
+.timeend {
+  color: white;
+  display: inline;
+  margin: auto 0px;
+  text-align: center;
+  line-height: 15px;
+}
+.control {
+  width: 218px;
+  height: 50px;
+  margin: 18px auto 0px;
+  display: flex;
+  box-sizing: border-box;
+}
+.butrepeat {
+  width: 20px;
+  height: 20px;
+  background: url('../img/Repeat.svg') no-repeat top;
+  margin-right: 22px;
+  margin-left: 0;
+  border: none;
+  display: inline;
+  margin-top: 15px;
+
+}
+.butback {
+  width: 20px;
+  height: 20px;
+  background: url('../img/Back.svg') no-repeat top;
+  margin-right: 22px;
+  margin-left: 0;
+  border: none;
+  display: inline;
+  margin-top: 15px;
+}
+.butpause {
+  width: 50px;
+  height: 50px;
+  background: url('../img/Pause.svg') no-repeat top;
+  margin-right: 22px;
+  margin-left: 0;
+  border: none;
+  display: inline;
+}
+.butnext {
+  width: 20px;
+  height: 20px;
+  background: url('../img/Next.svg') no-repeat top;
+  margin-right: 22px;
+  margin-left: 0;
+  border: none;
+  display: inline;
+  margin-top: 15px;
+}
+.butvolume {
+  width: 20px;
+  height: 20px;
+  background: url('../img/Volume-full.svg') no-repeat top;
+  margin-right: 0;
+  margin-left: 0;
+  border: none;
+  display: inline;
+  margin-top: 15px;
 }
 
-/*
- * Hide visually and from screen readers, but maintain layout
- */
 
-.invisible {
-  visibility: hidden;
+.mainright {
+  width: 760px;
+  padding: 45px;
 }
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix::before,
-.clearfix::after {
-  content: " ";
-  display: table;
+.filetypes {
+  width: 760px;
+  height: 20px;
+  display: flex;
 }
-
-.clearfix::after {
-  clear: both;
+.afiletypes {
+  margin-right: 22px;
+  text-decoration: none;
+  color: #7C8DB5;
 }
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+.cardbody {
+  width: 760px;
+  border: 1px solid #E6EFFB;
+  border-radius: 10px;
+  background: #FFFFFF;
+  margin-top: 30px;
 }
-
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+.head {
+  width: 712px;
+  height: 24px;
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  margin-top: 23px;
+  margin-left: 23px;
 }
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   https://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
-  *,
-  *::before,
-  *::after {
-    background: #fff !important;
-    color: #000 !important;
-    /* Black prints faster */
-    box-shadow: none !important;
-    text-shadow: none !important;
-  }
-
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
-
-  a[href]::after {
-    content: " (" attr(href) ")";
-  }
-
-  abbr[title]::after {
-    content: " (" attr(title) ")";
-  }
-
-  /*
-   * Don't show links that are fragment identifiers,
-   * or use the `javascript:` pseudo protocol
-   */
-  a[href^="#"]::after,
-  a[href^="javascript:"]::after {
-    content: "";
-  }
-
-  pre {
-    white-space: pre-wrap !important;
-  }
-
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid;
-  }
-
-  /*
-   * Printing Tables:
-   * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-   */
-  thead {
-    display: table-header-group;
-  }
-
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
-
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
-
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
+.half {
+  height: 24px;
+  display: flex;
+  align-items: center;
 }
-
+.pic {
+  width: 24px;
+  height: 24px;
+  display: inline;
+}
+.pictext {
+  display: inline;
+  font-size: 18px; 
+  line-height: 24px;
+  margin-left: 8px;
+}
+.see {
+  display: inline;
+  text-decoration: none;
+  color: #7C8DB5;
+  text-align: center;
+  line-height: 24px;
+}
+.cardmargin1, .cardmargin2 {
+  width: 712px;
+  height: 205px;
+  box-sizing: border-box;
+  margin: 22px 23px 26px;
+}
+.card {
+  width: 163px;
+  height: 205px;
+  display: inline-block;
+  box-sizing: border-box;
+  margin-right: 20px;
+  padding: 15px;
+  margin-left: 0;
+  background: #FFFFFF;
+  border: 1px solid #E6EFFB;
+  border-radius: 10px;
+}
+.card:last-child {
+margin-right: 0;
+}
+.cardimage {
+  width: 131px;
+  height: 125px;
+  border: 0;
+}
+.play {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  background: #FFFFFF;
+  border-radius: 10px;
+  margin-top: -58px;
+  margin-left: 76px;
+  z-index: 1;
+}
+.playimg {
+  width: 13px;
+  height: 16px;
+  z-index: 2;
+  margin: 12px 14px;
+}
+.song {
+  width: 129px;
+  height: 41px;
+  margin-top: 9px;
+}
+.titlealbym {
+  font-size: 15px;
+  line-height: 19px;
+  margin-bottom: 0;
+}
+.author {
+  font-size: 12px;
+  line-height: 15px;
+  text-decoration: none;
+  color: #7C8DB5;
+}
+.row {
+  width: 712px;
+  height: 42px;
+  margin: 29px auto;
+  justify-content: space-between;
+  display: flex;
+}
+.halfleft {
+  box-sizing: border-box;
+  display: flex;
+}
+.numberr {
+  width: 16px;
+  height: 20px;
+  margin-top: 10px;
+  font-size: 16px;
+}
+.titlethumb {
+  width: 221px;
+  height: 41px;
+  margin-left: 24px;
+  display: flex;
+  align-items: center;
+}
+.imgthumb {
+  width: 40px;
+  height: 40px;
+}
+.desc {
+  width: auto;
+  margin-left: 15px;
+}
+.titlealbymplayed {
+  width: 170px;
+  font-size: 16px;
+  line-height: 20px;
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+.authorplayed {
+  width: auto;
+  height: 17px;
+  font-size: 14px;
+  line-height: 17px;
+  text-decoration: none;
+  color: #7C8DB5;
+  margin-top: 4px;
+  margin-bottom: 0;
+}
+.halfright {
+  width: 143px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+}
+.time {
+  width: 31px;
+  line-height: 17px;
+  font-size: 14px;
+  color: #7C8DB5;
+  margin-top: 13px;
+}
+.icons {
+  width: 95px;
+  height: 40px;
+  box-sizing: border-box;
+  margin-left: 17px;
+  justify-content: space-between;
+  display: flex;
+}
+.play2 {
+  width: 40px;
+  height: 40px;
+  background: #FFFFFF;
+  border: 1px solid #e6edfd;
+  border-radius: 10px;
+  z-index: 1;
+}
+.plus {
+  width: 40px;
+  height: 40px;
+  background: #FFFFFF;
+  border: 1px solid #e6edfd;
+  border-radius: 10px;
+  z-index: 1;
+}
+.rectangle {
+  width: 15px;
+  height: 15px;
+  z-index: 2;
+  margin: 12px 12px;
+}
