--- a/css/main.css
+++ b/css/main.css
@@ -9,21 +9,31 @@ body {
 }
 .add-field {
   width: 484px;
-  height: 50px;
-  display: flex;
+  height: 124px;
+  /* display: flex; */
   margin-left: auto;
   margin-right: auto;
   margin-top: 26px;
-  justify-content: space-between;
+  box-sizing: border-box;
+  /* justify-content: space-between; */
 }
 .add-field__exercise {
-  width: 358px;
+  width: 478px;
+  height: 50px;
   border-radius: 8px;
   border: 1px solid #CCCCCC;  
   box-shadow: 0px 4px 4px rgba(204, 204, 204, 0.25);
 }
-.add-field__add {
-  width: 109px;
+.add-field__half {
+  width: 484px;
+  height: 50px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.add-field__addend, .add-field__addbegin {
+  width: 200px;
+  height: 50px;
   background: #62BDFF;
   border-radius: 8px;
   font-size: 18px;
@@ -66,7 +76,7 @@ padding-left: 8px;
   top: 50%;
   margin-top: -7px;
 }
-.area__element__text1, .area__element__text2,.area__element__text3,.area__element__text4 {
+.area__element__text1 {
   margin: auto 6px;
 }
 .area__element__trash {
